Remove set-but-unused variables, to appease gcc 4.6

https://bugzilla.gnome.org/show_bug.cgi?id=640447